[gd_scene load_steps=41 format=2]

[ext_resource path="res://scenes/levels/WorldEnvironment.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/programmerArt/image-asset.jpeg" type="Texture" id=2]
[ext_resource path="res://scenes/ui/menus/Main_Menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/levels/holders.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/starting_level.gd" type="Script" id=5]
[ext_resource path="res://musicManager.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/start-endPoint.gd" type="Script" id=7]
[ext_resource path="res://assets/programmerArt/billboard.png" type="Texture" id=8]
[ext_resource path="res://assets/3d/glb/train/trainside.material" type="Material" id=9]
[ext_resource path="res://assets/audio/train-loop-07.wav" type="AudioStream" id=10]
[ext_resource path="res://scenes/assets/3d/track.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/shaders/movingGrass.tres" type="Material" id=12]
[ext_resource path="res://assets/programmerArt/skyline.png" type="Texture" id=13]
[ext_resource path="res://scenes/interactibles/ventDoor.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/textures/Metal Floor 2.PNG" type="Texture" id=15]
[ext_resource path="res://assets/textures/Brick 1.PNG" type="Texture" id=16]
[ext_resource path="res://assets/textures/SUI/SU_WH_3.PNG" type="Texture" id=17]
[ext_resource path="res://assets/audio/trainStopping.wav" type="AudioStream" id=18]
[ext_resource path="res://assets/programmerArt/Trans.png" type="Texture" id=19]
[ext_resource path="res://assets/fonts/Mukta_Mahee/MuktaMahee-Bold.ttf" type="DynamicFontData" id=20]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 100, 100 )

[sub_resource type="PlaneMesh" id=11]
size = Vector2( 100, 100 )

[sub_resource type="Shader" id=12]
code = "shader_type spatial;
render_mode cull_front, depth_draw_alpha_prepass;

uniform sampler2D sample;
uniform float scale = 5.0;
uniform float speed = 2;

void fragment() {
	vec2 newUV = vec2(UV.x * 2.0 - TIME * speed, UV.y);
	if (UV.x >= 0.5) {
	newUV.x = UV.x * 2.0 + TIME * speed;
	vec4 text = texture(sample, newUV);
	ALBEDO = text.rgb;
	ALPHA = text.a;
	}
	if (UV.x < 0.5) {
	vec4 text = texture(sample, newUV);
	ALBEDO = text.rgb;
	ALPHA = text.a;
	}
}"

[sub_resource type="ShaderMaterial" id=13]
shader = SubResource( 12 )
shader_param/scale = 5.0
shader_param/speed = 0.25
shader_param/sample = ExtResource( 13 )

[sub_resource type="SphereMesh" id=14]
radius = 50.0
height = 50.0

[sub_resource type="BoxShape" id=10]
extents = Vector3( 1.5, 0.5, 5 )

[sub_resource type="ArrayMesh" id=9]
resource_name = "train_Cube001"
surfaces/0 = {
"aabb": AABB( -0.723837, -1.07597, -2, 1.44767, 1.746, 4.00001 ),
"array_data": PoolByteArray( 58, 181, 252, 190, 111, 185, 137, 191, 0, 0, 0, 64, 166, 220, 0, 63, 224, 59, 34, 59, 58, 181, 252, 190, 111, 185, 137, 191, 0, 0, 0, 64, 0, 129, 0, 63, 172, 59, 166, 10, 58, 181, 252, 190, 111, 185, 137, 191, 0, 0, 0, 64, 0, 0, 0, 1, 46, 58, 141, 57, 98, 98, 42, 191, 64, 74, 1, 63, 203, 175, 249, 63, 136, 6, 0, 63, 200, 59, 196, 52, 98, 98, 42, 191, 64, 74, 1, 63, 203, 175, 249, 63, 222, 92, 130, 1, 185, 34, 245, 54, 98, 98, 42, 191, 64, 74, 1, 63, 203, 175, 249, 63, 0, 5, 0, 2, 152, 55, 242, 57, 98, 98, 42, 191, 64, 74, 1, 63, 203, 175, 249, 63, 0, 35, 214, 121, 185, 34, 245, 54, 58, 181, 252, 190, 111, 185, 137, 191, 0, 0, 0, 192, 166, 220, 0, 63, 123, 37, 34, 59, 58, 181, 252, 190, 111, 185, 137, 191, 0, 0, 0, 192, 0, 129, 0, 63, 229, 54, 168, 10, 58, 181, 252, 190, 111, 185, 137, 191, 0, 0, 0, 192, 127, 127, 0, 1, 46, 58, 152, 54, 98, 98, 42, 191, 64, 74, 1, 63, 204, 175, 249, 191, 136, 6, 0, 63, 66, 40, 196, 52, 98, 98, 42, 191, 64, 74, 1, 63, 204, 175, 249, 191, 222, 92, 126, 126, 86, 56, 245, 54, 98, 98, 42, 191, 64, 74, 1, 63, 204, 175, 249, 191, 121, 127, 251, 1, 152, 55, 207, 53, 98, 98, 42, 191, 64, 74, 1, 63, 204, 175, 249, 191, 91, 127, 36, 1, 86, 56, 245, 54, 58, 181, 252, 62, 111, 185, 137, 191, 0, 0, 0, 64, 0, 129, 0, 63, 172, 59, 83, 50, 58, 181, 252, 62, 111, 185, 137, 191, 0, 0, 0, 64, 0, 0, 0, 1, 46, 58, 152, 54, 58, 181, 252, 62, 111, 185, 137, 191, 0, 0, 0, 64, 90, 220, 130, 1, 73, 37, 44, 59, 98, 98, 42, 63, 64, 74, 1, 63, 203, 175, 249, 63, 0, 5, 0, 2, 152, 55, 207, 53, 98, 98, 42, 63, 64, 74, 1, 63, 203, 175, 249, 63, 0, 35, 36, 125, 189, 34, 185, 57, 98, 98, 42, 63, 64, 74, 1, 63, 203, 175, 249, 63, 34, 92, 126, 1, 189, 34, 185, 57, 98, 98, 42, 63, 64, 74, 1, 63, 203, 175, 249, 63, 120, 6, 126, 1, 42, 40, 215, 52, 58, 181, 252, 62, 111, 185, 137, 191, 0, 0, 0, 192, 0, 129, 0, 63, 229, 54, 83, 50, 58, 181, 252, 62, 111, 185, 137, 191, 0, 0, 0, 192, 127, 127, 0, 1, 46, 58, 141, 57, 58, 181, 252, 62, 111, 185, 137, 191, 0, 0, 0, 192, 90, 220, 130, 1, 222, 59, 44, 59, 98, 98, 42, 63, 64, 74, 1, 63, 204, 175, 249, 191, 121, 127, 5, 1, 152, 55, 241, 57, 98, 98, 42, 63, 64, 74, 1, 63, 204, 175, 249, 191, 91, 127, 214, 5, 86, 56, 185, 57, 98, 98, 42, 63, 64, 74, 1, 63, 204, 175, 249, 191, 34, 92, 127, 1, 86, 56, 185, 57, 98, 98, 42, 63, 64, 74, 1, 63, 204, 175, 249, 191, 120, 6, 126, 1, 198, 59, 215, 52, 102, 77, 57, 191, 83, 253, 3, 191, 0, 0, 0, 64, 136, 6, 0, 63, 224, 59, 93, 57, 102, 77, 57, 191, 83, 253, 3, 191, 0, 0, 0, 64, 166, 220, 0, 63, 224, 59, 93, 57, 102, 77, 57, 191, 83, 253, 3, 191, 0, 0, 0, 64, 0, 0, 0, 1, 86, 57, 20, 58, 102, 77, 57, 191, 83, 253, 3, 191, 0, 0, 0, 64, 0, 5, 0, 2, 86, 57, 20, 58, 102, 77, 57, 191, 83, 253, 3, 191, 0, 0, 0, 192, 136, 6, 0, 63, 123, 37, 93, 57, 102, 77, 57, 191, 83, 253, 3, 191, 0, 0, 0, 192, 166, 220, 0, 63, 123, 37, 93, 57, 102, 77, 57, 191, 83, 253, 3, 191, 0, 0, 0, 192, 127, 127, 0, 1, 86, 57, 139, 53, 102, 77, 57, 191, 83, 253, 3, 191, 0, 0, 0, 192, 121, 127, 5, 1, 86, 57, 139, 53, 102, 77, 57, 63, 83, 253, 3, 191, 0, 0, 0, 192, 127, 127, 0, 1, 86, 57, 19, 58, 102, 77, 57, 63, 83, 253, 3, 191, 0, 0, 0, 192, 121, 127, 5, 1, 86, 57, 19, 58, 102, 77, 57, 63, 83, 253, 3, 191, 0, 0, 0, 192, 90, 220, 130, 1, 222, 59, 103, 57, 102, 77, 57, 63, 83, 253, 3, 191, 0, 0, 0, 192, 120, 6, 126, 1, 222, 59, 103, 57, 102, 77, 57, 63, 83, 253, 3, 191, 0, 0, 0, 64, 0, 0, 0, 1, 86, 57, 139, 53, 102, 77, 57, 63, 83, 253, 3, 191, 0, 0, 0, 64, 0, 5, 0, 2, 86, 57, 139, 53, 102, 77, 57, 63, 83, 253, 3, 191, 0, 0, 0, 64, 90, 220, 130, 1, 73, 37, 103, 57, 102, 77, 57, 63, 83, 253, 3, 191, 0, 0, 0, 64, 120, 6, 126, 1, 73, 37, 103, 57, 124, 157, 103, 190, 214, 134, 43, 63, 102, 161, 241, 63, 222, 92, 126, 126, 173, 40, 65, 56, 124, 157, 103, 190, 214, 134, 43, 63, 102, 161, 241, 63, 0, 35, 206, 116, 173, 40, 65, 56, 124, 157, 103, 190, 214, 134, 43, 63, 102, 161, 241, 63, 0, 127, 127, 126, 173, 40, 65, 56, 124, 157, 103, 190, 214, 134, 43, 63, 104, 161, 241, 191, 222, 92, 126, 126, 37, 56, 58, 56, 124, 157, 103, 190, 214, 134, 43, 63, 104, 161, 241, 191, 91, 127, 35, 1, 37, 56, 58, 56, 124, 157, 103, 190, 214, 134, 43, 63, 104, 161, 241, 191, 0, 127, 127, 126, 37, 56, 58, 56, 124, 157, 103, 62, 214, 134, 43, 63, 102, 161, 241, 63, 0, 35, 35, 126, 195, 40, 250, 56, 124, 157, 103, 62, 214, 134, 43, 63, 102, 161, 241, 63, 0, 127, 127, 126, 195, 40, 250, 56, 124, 157, 103, 62, 214, 134, 43, 63, 102, 161, 241, 63, 34, 92, 126, 1, 195, 40, 250, 56, 124, 157, 103, 62, 214, 134, 43, 63, 104, 161, 241, 191, 91, 127, 206, 10, 38, 56, 243, 56, 124, 157, 103, 62, 214, 134, 43, 63, 104, 161, 241, 191, 0, 127, 127, 126, 38, 56, 243, 56, 124, 157, 103, 62, 214, 134, 43, 63, 104, 161, 241, 191, 34, 92, 126, 1, 38, 56, 243, 56 ),
"array_index_data": PoolByteArray( 28, 0, 10, 0, 3, 0, 28, 0, 32, 0, 10, 0, 35, 0, 24, 0, 12, 0, 35, 0, 37, 0, 24, 0, 39, 0, 20, 0, 27, 0, 39, 0, 43, 0, 20, 0, 41, 0, 5, 0, 17, 0, 41, 0, 31, 0, 5, 0, 8, 0, 14, 0, 21, 0, 8, 0, 1, 0, 14, 0, 19, 0, 55, 0, 26, 0, 19, 0, 52, 0, 55, 0, 15, 0, 30, 0, 40, 0, 15, 0, 2, 0, 30, 0, 23, 0, 42, 0, 38, 0, 23, 0, 16, 0, 42, 0, 9, 0, 36, 0, 34, 0, 9, 0, 22, 0, 36, 0, 0, 0, 33, 0, 29, 0, 0, 0, 7, 0, 33, 0, 54, 0, 46, 0, 49, 0, 54, 0, 51, 0, 46, 0, 11, 0, 44, 0, 4, 0, 11, 0, 47, 0, 44, 0, 6, 0, 50, 0, 18, 0, 6, 0, 45, 0, 50, 0, 25, 0, 48, 0, 13, 0, 25, 0, 53, 0, 48, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 84,
"material": ExtResource( 9 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 56
}

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.192157, 0.192157, 0.192157, 1 )

[sub_resource type="SpatialMaterial" id=8]
flags_unshaded = true
albedo_texture = ExtResource( 8 )
uv1_scale = Vector3( -1, 0.5, 0 )
uv1_offset = Vector3( 0, 0.25, 0 )
uv2_scale = Vector3( 0, 0, 0 )
distance_fade_mode = 2
distance_fade_min_distance = 5.0
distance_fade_max_distance = 1.0

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.5, 0.5, 0.5 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CubeMesh" id=3]
material = SubResource( 5 )
size = Vector3( 1, 1, 1 )

[sub_resource type="SpatialMaterial" id=15]
albedo_texture = ExtResource( 16 )
uv1_scale = Vector3( 0.5, 0.5, 0.5 )
uv1_triplanar = true

[sub_resource type="SpatialMaterial" id=16]
albedo_texture = ExtResource( 15 )
uv1_scale = Vector3( 0.5, 0.5, 0.5 )
uv1_triplanar = true

[sub_resource type="DynamicFont" id=24]
size = 24
extra_spacing_top = -8
extra_spacing_bottom = -8
font_data = ExtResource( 20 )

[sub_resource type="Shader" id=17]
code = "shader_type spatial;

uniform sampler2D sample;
uniform float scale = 12.0;
uniform float speed = 1.0;

void vertex() {
	vec4 text = texture(sample, UV);
	VERTEX.y = text.r * 100.0;
}

void fragment() {
	vec2 newUV = vec2(UV.x * scale, UV.y * scale - TIME * speed);
	vec4 text = texture(sample, newUV);
	//ALBEDO = text.rgb;
}

"

[sub_resource type="OpenSimplexNoise" id=22]

[sub_resource type="NoiseTexture" id=21]
noise = SubResource( 22 )

[sub_resource type="ShaderMaterial" id=23]
shader = SubResource( 17 )
shader_param/scale = 12.0
shader_param/speed = 1.0
shader_param/sample = SubResource( 21 )

[sub_resource type="PlaneMesh" id=19]
material = SubResource( 23 )
size = Vector2( 1000, 1000 )
subdivide_width = 100
subdivide_depth = 100

[node name="World" type="Spatial"]
script = ExtResource( 5 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0 )
current = true
far = 8192.0

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.04847, 1.08965, -4.62217 )
visible = false
texture = ExtResource( 2 )

[node name="Main_Menu" parent="." instance=ExtResource( 3 )]

[node name="holders" parent="." instance=ExtResource( 4 )]

[node name="WorldEnvironment" parent="." instance=ExtResource( 1 )]

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 12 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 22, 15.5311, 0 )
visible = false
mesh = SubResource( 11 )
material/0 = SubResource( 13 )

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 10.8191, 0 )
visible = false
mesh = SubResource( 14 )
material/0 = SubResource( 13 )

[node name="train" type="StaticBody" parent="." groups=["CantShoot"]]

[node name="CollisionShape" type="CollisionShape" parent="train"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )
shape = SubResource( 10 )

[node name="CollisionShape2" type="CollisionShape" parent="train"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -2, 1.19209e-07, 0 )
shape = SubResource( 10 )

[node name="CollisionShape3" type="CollisionShape" parent="train"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 2, 1.19209e-07, 0 )
shape = SubResource( 10 )

[node name="CollisionShape4" type="CollisionShape" parent="train"]
transform = Transform( 1.91069e-15, -4.37114e-08, 1, -1, -4.37114e-08, 0, 4.37114e-08, -1, -4.37114e-08, -2, 1.19209e-07, 4.5 )
shape = SubResource( 10 )

[node name="CollisionShape5" type="CollisionShape" parent="train"]
transform = Transform( 1.91069e-15, -4.37114e-08, 1, -1, -4.37114e-08, 0, 4.37114e-08, -1, -4.37114e-08, -2, 1.19209e-07, -4.5 )
shape = SubResource( 10 )

[node name="train" type="MeshInstance" parent="train"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -2.7, 0 )
mesh = SubResource( 9 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.467066, 0.884223, 0, -0.884223, -0.467066, 0, 10.0049, 2.83859 )
light_energy = 0.3
light_specular = 0.0
directional_shadow_mode = 0

[node name="moving" type="Spatial" parent="."]

[node name="billboard" type="CSGCombiner" parent="moving"]
transform = Transform( 2.12132, 0, 2.12132, 0, 3, 0, -2.12132, 0, 2.12132, -11.3133, -4.8, -5.09069 )

[node name="CSGCylinder" type="CSGCylinder" parent="moving/billboard"]
transform = Transform( -0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, -0.965926, 0, 0, 0 )
radius = 0.5
height = 0.3
material = SubResource( 7 )

[node name="CSGCylinder2" type="CSGCylinder" parent="moving/billboard"]
transform = Transform( -0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, -0.965926, 0, 0.2, 0 )
radius = 0.3
height = 0.3
material = SubResource( 7 )

[node name="CSGCylinder3" type="CSGCylinder" parent="moving/billboard"]
transform = Transform( -0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, -0.965926, 0, 1.8, 0 )
radius = 0.1
height = 3.0
material = SubResource( 7 )

[node name="CSGBox" type="CSGBox" parent="moving/billboard"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.38419e-07, 3.4, 0.1 )
width = 4.0
depth = 0.1
material = SubResource( 8 )

[node name="Sprite3D" type="Sprite3D" parent="moving/billboard"]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 3.4, 0 )
texture = ExtResource( 19 )

[node name="trainSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "sfx"

[node name="trainStoppingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
pitch_scale = 0.8
bus = "sfx"

[node name="train_track" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.9, 0 )

[node name="track" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 10 )

[node name="track2" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 6 )

[node name="track3" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 2 )

[node name="track4" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -2 )

[node name="track5" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -6 )

[node name="track6" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -10 )

[node name="track7" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -14 )

[node name="track8" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -18 )

[node name="track9" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -22 )

[node name="track10" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -26 )

[node name="track11" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -30 )

[node name="track12" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -34 )

[node name="track13" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -38 )

[node name="track14" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -42 )

[node name="track15" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -46 )

[node name="track16" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -50 )

[node name="track17" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 42 )

[node name="track18" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 38 )

[node name="track19" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 34 )

[node name="track20" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 30 )

[node name="track21" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 26 )

[node name="track22" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 22 )

[node name="track23" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 18 )

[node name="track24" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 14 )

[node name="startTrees" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16, -5.1, -50 )

[node name="endTrees" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16, -5.1, -50 )

[node name="building" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -19, 0 )

[node name="endPoint" type="Spatial" parent="building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.982, -1.5, 0.194 )
visible = false
script = ExtResource( 7 )

[node name="Area" type="Area" parent="building/endPoint"]

[node name="CollisionShape" type="CollisionShape" parent="building/endPoint/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="building/endPoint/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
mesh = SubResource( 3 )
skeleton = NodePath("../..")

[node name="musicManager" parent="building" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 19, 0 )

[node name="StaticBody" type="StaticBody" parent="building"]

[node name="buildingMesh" type="CSGCombiner" parent="building/StaticBody"]
use_collision = true
collision_layer = 7
collision_mask = 7

[node name="CSGBox" type="CSGBox" parent="building/StaticBody/buildingMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0.7 )
width = 24.0
height = 14.0
depth = 8.0
material = SubResource( 15 )

[node name="CSGBox2" type="CSGBox" parent="building/StaticBody/buildingMesh/CSGBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 2, 3 )
operation = 2
width = 1.0
height = 1.0
depth = 6.0
material = SubResource( 16 )

[node name="CSGBox3" type="CSGBox" parent="building/StaticBody/buildingMesh/CSGBox"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 9.5, 2, 0 )
operation = 2
width = 1.0
height = 1.0
depth = 4.0
material = SubResource( 16 )

[node name="CSGBox4" type="CSGBox" parent="building/StaticBody/buildingMesh/CSGBox"]
transform = Transform( 1.91069e-15, 1, 4.37114e-08, 4.37114e-08, -4.37114e-08, 1, 1, 0, -4.37114e-08, 11, 0.5, 0 )
operation = 2
width = 1.0
height = 1.0
depth = 4.0
material = SubResource( 16 )

[node name="CSGBox" type="CSGBox" parent="building/StaticBody/buildingMesh/CSGBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, -1, 5 )
operation = 2
width = 4.0
height = 4.0
depth = 20.0

[node name="massive" type="CSGBox" parent="building/StaticBody/buildingMesh/CSGBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 28, 39, -29 )
width = 50.0
height = 1000.0
depth = 50.0
material = SubResource( 15 )

[node name="ventDoor" parent="building/StaticBody" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1.5, 4.7 )

[node name="Label3D" type="Label3D" parent="building/StaticBody/ventDoor"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.5, 0.0100002, -0.513 )
text = "crouch
while
moving
forward"
font = SubResource( 24 )

[node name="Sprite3D" type="Sprite3D" parent="building/StaticBody"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -14, 4, 4.8 )
texture = ExtResource( 17 )

[node name="terrain" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -74, 0 )
extra_cull_margin = 10.0
mesh = SubResource( 19 )

[connection signal="body_entered" from="building/endPoint/Area" to="building/endPoint" method="_on_Area_body_entered"]
